--- a/index.html
+++ b/index.html
@@ -1398,7 +1398,7 @@
                 
                 <div>
 
-                    <p> Copyright © 2023 developed by <a href="mailto:anyadav411998@gmail.com"> anshul yadav </a></p>
+                    <p> Copyright © 2023 developed by <a href="mailto:anyadav411998@gmail.com"> Chiku Borah </a></p>
                     <img loading="lazy" loading="lazy" src="paymentcard.png" alt="">
 
                 </div>
