--- a/index.html
+++ b/index.html
@@ -113,8 +113,10 @@
                             <li>
                                 $ Us Doller <i class="fa-solid fa-caret-down"></i>
                             </li>
-                            <li>
-                                &#127468;&#127463; English <i class="fa-solid fa-caret-down"></i>
+                            <li class=>
+                                &#127468;&#127463; English 
+                 
+                                <i class="fa-solid fa-caret-down"></i>
                             </li>
                         </ul>
 
